# card-correction

./: .gitignore  CMakeLists.txt  README.md  correct.cpp  correct.h  main.cpp
ncnn-20240410-windows-vs2022/arm/include/ncnn/: platform.h
ncnn-20240410-windows-vs2022/arm/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
ncnn-20240410-windows-vs2022/arm/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
ncnn-20240410-windows-vs2022/arm64/include/ncnn/: platform.h
ncnn-20240410-windows-vs2022/arm64/lib/: GenericCodeGen.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
ncnn-20240410-windows-vs2022/arm64/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
